flux/infrastructure/fluxcapacitor/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: capacitor
    namespace: flux-system
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:uBr6dSauzJpY8Xf4Ote0+QyLGz7yQN0XCDS2cMtL8A==,iv:D/M9rDXSYlfAX4kZ7k9JTgSr9BUzbfmllDQSk43OojQ=,tag:gb8Rka25yp8BRIePGXiD/Q==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: capacitor
              port: 9000
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUL2pubXA5OTZjU3NOK3Q0
[...]
            nrkfex0eIN8Pln0eKH8fyLh9hPUyfuS7MHOUPfJZP01ui59Tk1aQ+A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-01-16T14:24:45Z"
    mac: ENC[AES256_GCM,data:rPW1sDB/ZuO/0gbhmc18LxQkBIKCP5R/GrSDh8yK3CLeniVjXgLnq8lVu3qcZR25FmR05WK4ChH/YLCy2rusNXYHH0CKUiJCgnhQ049Fit8TlEumrpmlvY1yOVE4Zk0KErsMYLo1jFbuthyk/IFdkhDYAS2SVJpxL4RXHRGtKI0=,iv:piSlM8NR8YGE70MFjLtZkyRGB112uBdQ0fD7H5WvvVc=,tag:fAQapllRrajNu5N+4P0mTA==,type:str]
    encrypted_regex: hostnames|0
    version: 3.11.0
